# StarTrack

./: .black  .env_example  .evn  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  pytest.ini
.github/workflows/: check.yml
alembic/: env.py
alembic/versions/: 0894f0830e17_initial.py  2ff18d6618a2_initial.py  61c01020eed5_initial.py  71aac573269b_initial.py  79e6f7a86f9b_initial.py  8b1964bc1611_initial.py
src/: dependencies.py  gemini.py  gpt.py  logger.py  middlewares.py  settings.py  template_endpoints.py  unit_of_work.py  utils.py
src/api/: router.py
src/api/ai/: router.py
src/api/auth/: router.py
src/api/v1/: child.py  child_academic_data.py  child_data.py  child_development_data.py  child_family_data.py  child_health_data.py  (+4 more)
src/database/: base.py  enums.py  models.py
src/repositories/: base.py  models.py
src/schemas/: base.py  child.py  child_academic_data.py  child_data.py  child_development_data.py  child_family_data.py  child_health_data.py  child_medical_data.py  child_nutrition_data.py  child_physical_data.py  custom_types.py  custom_validators.py  settings.py  token.py  user.py
src/services/: child.py  child_academic_data.py  child_data.py  child_development_data.py  child_family_data.py  child_health_data.py  child_medical_data.py  child_nutrition_data.py  child_physical_data.py  user.py
static/: script.js  styles.css
templates/: ai_chat.html  ai_test.html  base.html  coach_dashboard.html  create_profile.html  dashboard.html  diary.html  homepage.html  login.html  parent_dashboard.html  register.html  register_coach.html  register_parent.html
templates/homepage_components/: footer.html  header.html  main.html
tests/: conftest.py  test_repositories.py  test_utils.py
(+13 files in other folders)
