[tool.poetry]
name = "startrack"
version = "0.1.0"
description = ""
authors = ["“magelick” <fcdm2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.2"}
sqlalchemy = "^2.0.32"
pytest = "^8.3.2"
redis = "^5.0.8"
mypy = "^1.11.2"
psycopg2-binary = "^2.9.9"
flake8 = "^7.1.1"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
