[tool.poetry]
name = "startrack"
version = "0.1.0"
description = ""
authors = ["“magelick” <fcdm2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.33"}
pytest = "^8.3.2"
mypy = "^1.11.2"
flake8 = "^7.1.1"
black = "^24.8.0"
asyncpg = "^0.29.0"
pre-commit = "^3.8.0"
fastapi-cache2 = "^0.2.2"
redis = "^5.0.8"
alembic = "^1.13.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.9.0"
pytest-asyncio = "^0.24.0"
numpy = "^2.1.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
